# CSVit

./: .gitignore  Cargo.toml  README.md  generate_large_csv.py
scripts/: bundle_mac.sh
src/: main.rs
src/backend/: analysis.rs  csvi.rs  editor.rs  export.rs  formatting.rs  grid.rs  loader.rs  mod.rs  paged_reader.rs  parser.rs  settings.rs
src/gui/: app.rs  mod.rs
src/gui/windows/: mod.rs  settings.rs
