[package]
name = "csvit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
csv = "1.4.0"
directories = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
egui_plot = "0.34.0"
memmap2 = "0.9.9"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.24.0"
